# FastApiBackend

./: .env.example  .gitignore  README.md  auth.py  crud.py  database.py  logger.py  main.py  models.py  pyproject.toml  schemas.py  utils.py
config/: __init__.py
database/: __init__.py  crud.py
database/models/: user.py
routers/: captcha.py  oauth.py  token.py  user.py
schemas/: __init__.py  captcha.py  token.py  user.py
utils/: auth.py  email_verify.py  logger.py  request_limit.py  token.py
