[project]
name = "FastApiBackend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "g1331", email = "1257661006@qq.com"},
]
dependencies = [
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.30",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "passlib>=1.7.4",
    "aiosqlite>=0.20.0",
    "pycryptodome>=3.20.0",
    "python-jose>=3.3.0",
    "bcrypt==4.0.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "GPL 3.0"}


[tool.pdm]
distribution = false
